--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-# requirements.txt
-aiogram==3.4.1
-asyncpg==0.29.0
-APScheduler==3.10.4
+aiogram==3.x
+apscheduler==3.x
 python-dotenv==1.0.0
-Django==5.0
-psycopg2-binary==2.9.9
-Pillow==10.2.0
-aiofiles==23.2.1
+django==4.x
+psycopg2-binary==2.x
